fixed whitespace underneath map

--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,7 @@ body, html {
 #map {
     width: 110%;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
